--- a/book.toml
+++ b/book.toml
@@ -3,6 +3,7 @@ authors = []
 language = "zh"
 src = "src"
 title = "AI 日报 By 何夕2077"
+description = "为您精选 AI 领域的最新动态，包括行业新闻、热门开源项目、前沿学术论文、科技大V社交媒体言论，并通过 Google Gemini 模型进行智能处理与摘要生成，最终自动发布到 GitHub Pages 生成 AI 日报"
 create-missing = true  
 
 [output.html]
