--- a/wrangler.toml
+++ b/wrangler.toml
@@ -30,7 +30,7 @@ TWITTER_LIST_ID = "153028784690326528"
 TWITTER_FETCH_PAGES = "5" 
 PROJECTS_API_URL = "https://git-trending.justlikemaki.vip/topone/?since=daily"
 GITHUB_TOKEN = "github_pat_xxxxxx"
-GITHUB_REPO_OWNER = "justlovemaki"
+GITHUB_REPO_OWNER = "myanle"
 GITHUB_REPO_NAME = "CloudFlare-AI-Insight-Daily"
 GITHUB_BRANCH = "main"
 LOGIN_USERNAME = "root"
