--- a/book.toml
+++ b/book.toml
@@ -2,8 +2,8 @@
 authors = []
 language = "zh"
 src = "src"
-title = "By 何夕2077"
+title = "By yuansiwang"
 create-missing = true  
 
 [output.html]
-git-repository-url = "https://github.com/justlovemaki/CloudFlare-AI-Insight-Daily" # 替换成你的仓库地址
+git-repository-url = "https://github.com/myanle/CloudFlare-AI-Insight-Daily" # 替换成你的仓库地址
