wrangler.toml を更新

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -39,7 +39,7 @@ REDDIT_LIST_ID = "167576006499975168"
 REDDIT_FETCH_PAGES = "2" 
 PROJECTS_API_URL = "https://git-trending.justlikemaki.vip/topone/?since=daily"
 GITHUB_TOKEN = "github_pat_xxxxxx"
-GITHUB_REPO_OWNER = "justlovemaki"
+GITHUB_REPO_OWNER = "myanle"
 GITHUB_REPO_NAME = "CloudFlare-AI-Insight-Daily"
 GITHUB_BRANCH = "main"
 LOGIN_USERNAME = "root"
